Fixed content container  alignment issue

--- a/css/common.css
+++ b/css/common.css
@@ -73,7 +73,7 @@ a.grey-link {
 
 #container {
     margin: 0 auto;
-    width: 960px;
+    width: 715px;
     margin-top: 30px;
 }
 
